[package]
name = "sm-crypto"
version = "0.1.6"
edition = "2021"
authors = ["byx1216 <byx1216@126.com>"]
description = "A Rust Implementation of China's Standards of Encryption Algorithms(SM2/SM3/SM4)"
keywords = ["cipher", "cryptography", "sm2", "sm3", "sm4"]
license = "MIT"
repository = "https://github.com/byx1216/sm-crypto.git"

[dependencies]
num-traits = "0.2.14"
num-bigint = "0.4.3"
hex = "0.4.3"
num-integer = "0.1.44"
rand = "0.8.4"
pem = "1.0.2"
base64 = "0.13.0"
yasna = {version = "0.5.0", features = ["num-bigint"]}

[source.crates-io]
registry = "https://index.crates.io/"
